# image-classification

./: .codecov.yml  Dockerfile  docker-compose.yaml  kaggle.json  pyproject.toml  pytest.ini  pytest_hydra.ini
.github/workflows/: codecov.yml  docker.yml
configs/: config.yaml  eval.yaml  infer.yaml  train.yaml
src/: eval.py  infer.py  train.py
src/.devcontainer/: devcontainer.json
src/datamodules/: catdog.py
src/lightning_logs/version_0/: events.out.tfevents.1727631943.ebb097118260.1.0
src/lightning_logs/version_1/: events.out.tfevents.1727633693.8eacd0a21dd1.1.0
src/lightning_logs/version_2/: events.out.tfevents.1727634385.830def11fe9e.1.0
src/models/: dog_classifier.py
src/utils/: utils.py
tests/: conftest.py  test_catdog_datamodule.py  test_dog_classifier.py  test_eval.py  test_infer.py  test_pylogger.py  test_rich_utils.py  test_train.py  test_utils.py
